# PokeProject

./: readme.md
PokeProject/: CMakeLists.txt
PokeProject/Content/: pokedex.json
PokeProject/Source/: JsonParser.h  NlohmannParser.cpp  RapidJsonParser.h
Source/: NlohmannParser.h  Pokedex.cpp  Pokemon.h  RapidJsonParser.cpp  ServiceLocator.cpp  ServiceLocator.h
